--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
 
 copyright:
   year:             2017
-  name:             
+  name:             Terrence Wong
 
 # Google-analytics
 google-analytics:
