--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ baseurl:            "/" # the subpath of your site, e.g. /blog
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:           America/Vancouver
-permalink:          /:year-:month-:day/:title/
+permalink:          /:title/
 
 # Pagination
 paginate:           5
